# sd-2026-lab-c-grupo-3

./: .cam.json  .gitignore  README.md  authorized_keys  capture.sh  config.tape  flake.nix  labreport.json  lib.typ  mutagen.yml  skills-lock.json  sync.ps1  sync.sh  unsareport.json
l8/: .env.example  .gitignore  main.py  pyproject.toml  report.typ
l8/e1/: docker-compose.yml
l8/e1/src/: app.py  coordinator.py  log_store.py
l8/e1/src/static/: control.js  index.html  inventario.js  log.js  transferencia.js
l8/e2/: .env.example  docker-compose.yml  pyproject.toml  serve.py
l8/e2/init-scripts/: 02_cusco.sql  03_trujillo.sql
l8/e2/src/: coordinator.py  log_store.py
l8/e2/src/static/: app.js  client-api.js  client.js  index.html  style.css
l8/guide/: LAB.md
l8/init-scripts/: 01_arequipa.sql  03_cusco.sql
l8/snippets/e1/: coordinator.py  db.py  init.sql
l8/snippets/e2/: coordinator.py  db.py  init.sql
l8/src/: app.py  log_store.py  models.py
l8/src/e1/: serve.py
l8/src/e1/init-scripts/: 01_arequipa.sql  02_lima.sql  03_cusco.sql
l8/src/e1/scripts/: client_demo.py
l8/src/e1/src/: app.py  coordinator.py  db.py  log_store.py  models.py
l8/src/e1/src/static/: control.js  estado.js  index.html  inventario.js  (+3 more)
l8/src/e2/init-scripts/: 01_arequipa.sql
l8/src/e2/scripts/: client_demo.py
l8/src/e2/src/: app.py  coordinator.py  db.py  log_store.py  models.py
l9/src/: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  load-test.js  prometheus.yml  pyproject.toml  run-load-test.sh  start.sh
l9/src/k6/: load-test.js  run-load-test.sh
l9/src/services/billing/: Dockerfile  main.py
l9/src/services/frontend/: package.json  pnpm-lock.yaml
l9/src/services/inventory/: main.py
l9/src/services/notifications/: Dockerfile  main.py  requirements.txt
l9/src/services/orders/: main.py  requirements.txt
l9/src/services/transport/: Dockerfile  main.py
l9/src/tests/: conftest.py  report.html  requirements.txt  run_tests.sh  test_notifications.py  test_order_billing.py  test_order_inventory.py  test_order_transport.py
teo/mpi/: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.sh  docker-compose.yml  pyproject.toml
teo/mpi/guia/: guia.md
teo/mpi/report/: architecture.puml  bibliography.bib  report.typ  slides.html  slides.md  slides.pptx  template.typ
teo/mpi/scripts/: generate_data.py  run_mpi.sh  run_sequential.py
teo/mpi/src/dashboard/: dashboard.py
teo/mpi/src/mpi/: master.py  run.py  worker.py
teo/mpi/src/mpi_analysis/: core.py
(+437 files in other folders)
