[project]
name = "l8"
version = "0.1.0"
description = "Servidor FastAPI coordinador 2PC con 3 nodos PostgreSQL - FarmaAndes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]
