[project]
name = "logifresh"
version = "1.0.0"
description = "LogiFresh S.A. — Sistema de microservicios para distribución de alimentos refrigerados"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
services = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-html>=4.0",
    "httpx>=0.27",
    "ruff>=0.5",
    {include-group = "services"},
]
