[project]
name = "mpi-analysis"
version = "0.1.0"
description = "Sistema distribuido para análisis de datos meteorológicos con MPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mpi4py>=4.1.2",
    "scikit-learn",
    "joblib",
    "pandas",
    "dash>=4.2.0",
    "dash-bootstrap-components>=2.0.4",
    "plotly>=6.8.0",
]

[project.scripts]
generate-data = "mpi_analysis.scripts.generate_data:main"
run-mpi = "mpi_analysis.distributed.entrypoint:main"
